fix github buttons in high contrast (#8548)

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -938,6 +938,20 @@
         background-color: @HCbackground !important;
         color: @HCtextColor !important;
 
+        .ui.button {
+            color: @HCtextColor !important;
+
+            &:focus, &:hover {
+                color: @HCtextColor !important;
+                border-color: @selected !important;
+                background: @HCbackground !important;
+
+                i, span {
+                    color: @HCtextColor !important;
+                }
+            }
+        }
+
         table.diffview {
             background: @HCbackground !important;
             color: @HCtextColor !important;
